create github pages

--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -34,7 +34,7 @@
 
                     <div class="navbar-brand">
                         <a href="https://mobirise.com" class="navbar-logo"><img src="assets/images/1458986230-227x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="index.html">SRI VADIVELAN STORES</a>
+                        <a class="navbar-caption" href="index.html"></a>
                     </div>
 
                 </div>
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="true" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item"><a class="nav-link link" href="http://www.nyw.io/viewer/vbid-67ff0-ojqdlra3" aria-expanded="false">ADMIN</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
