create github pages

--- a/OurShowroom.html
+++ b/OurShowroom.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box6-4" data-bg-video="https://www.youtube.com/watch?v=uNCr7NdOJgw" style="padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -169,7 +169,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center"><span style="font-size: 0.8125rem; line-height: 1.5;">Copyright (c) 2017Sri Vadivelan Stores</span><br></p>
     </div>
 </footer>
 
