--- a/Terms&Conditions.html
+++ b/Terms&Conditions.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="testimonials4-u" style="background-image: url(assets/images/mbr.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);">
     </div>
@@ -156,7 +156,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-t" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">PLEASE CLOSE THIS TAB/WINDOW AFTER GOING THROUGH<br>Copyright (c) 2017Sri Vadivelan Stores</p>
+        <p class="text-xs-center"><span style="font-size: 0.8125rem; line-height: 1.5;">Copyright (c) 2017Sri Vadivelan Stores</span><br></p>
     </div>
 </footer>
 
