--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="9"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="9"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/quality-banner1-2000x693.jpg);">
@@ -123,7 +123,7 @@
                                         <h2 class="mbr-section-title display-1">TEMPLE WARE</h2>
                                         <p class="mbr-section-lead lead">We offer all types of Temple ware and Pooja Items like Brass, Copper Kalasam, Brass Thiruvatchi, Temple Bells, Swamy Idols and many more items at the most lowest price, as we are the manufacturers of such items</p>
 
-                                        
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-7d3a9fd3-fjyptzx4">KNOW MORE</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -623,7 +623,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Lowest Price</h3>
-        <div class="lead"><p>Since we are the manufacturer of brass vessels, we offer our products at very very lowest price in the market</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -635,7 +635,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Quality Ensured</h3>
-        <div class="lead"><p>The products we offer in our store are manufactured with lot of care and with superior quality which will last for yeras without any faults</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -647,7 +647,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Speedy Delivery</h3>
-        <div class="lead"><p>Bulk orders given in our store will be delivered so fast within the due date mentioned in your order receipt without any time delay or damages</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -659,7 +659,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Service</h3>
-        <div class="lead"><p>Mostly products we offer in our store will be free from damages. If there is any damages on rare cases like leakages (may be due to dropping or mishandling) will be serviced quickly at free of cost for a stipulated period from the date of purchase on showing the valid purchase receipt. ELECTRONIC ITEMS like Fridge, Television, Wet Grinder, Iron Box, Induction Stove, Mixer Grinder also be serviced for free if it comes under the warranty period</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -671,7 +671,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Satisfaction</h3>
-        <div class="lead"><p>One of the most important feature of our store. Friendly customer service before and after buying. Earning Customer's love and Fulfilling their Satisfaction is our motto</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -683,7 +683,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Value for you money</h3>
-        <div class="lead"><p>We know there's a lot of sufferings and hardwork lies behind each and every single rupee you're paying us. We make sure that, the precious money you pay won't be wasted at any cause by selling worthless products</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -695,7 +695,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Old is Gold</h3>
-        <div class="lead"><p>Nothing is waste in this world. You can exchange your old brass, steel, copper, aluminium vessels or scrap at higher rates and you can buy new products. You can also exchange your old and used appliances under attractive exchange offers</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -707,7 +707,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Memorable Gifts</h3>
-        <div class="lead"><p>Lot of offers and discounts in price will be announced in store for bulk purchases and for marriage purchases. Special gifts will be given for marriage purchases</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -719,7 +719,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Digital Payment</h3>
-        <div class="lead"><p>The world is moving to digital transaction which has many advantages in it. We accept all major Credit Cards which includes service charges</p></div>
+        <div class="lead"></div>
     </div>
 
 </section>
@@ -900,7 +900,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="NwBxDJT5QTwj69iIgNLu1W1sq4mN93Spvn6KN+Av6QF9doTMSX/r2YKxNCG5Fxix5HmF7uc33wFhc/7m4lI2YTqQQ6xnZWlNoLbfHxe718RER9+hOxw53hM7VUNp9eoi" data-form-email="true">
+                    <input type="hidden" value="06CzVGmHJyifto82jZQcP8RKmF2B9ite9btT0m42lRELwYluB4PU+MC0pcC16CVr41JE2sSgt1dB2gpHMrrd9waqwP1ceLNk7CC9ZJyXBpGtF3USUalPABKvF8xP+Bsu" data-form-email="true">
 
                     
 
