--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -616,98 +616,26 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-h" style="background-image: url(assets/images/guaranteed-price-btn-tinified.png); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="content5-14" style="background-image: url(assets/images/guaranteed-price-btn-tinified.png); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Lowest Price</h3>
-        <div class="lead"></div>
+        <div class="lead"><p>Since we are the manufacturers of brass vessels, we offer brass products at very lowest. Apart from brass, we offer all items at wholesale price</p></div>
     </div>
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-j" style="background-image: url(assets/images/premium-satisfaction-guarantee-label-quality-customer.jpg); padding-top: 40px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="content5-15" style="background-image: url(assets/images/premium-satisfaction-guarantee-label-quality-customer.jpg); padding-top: 40px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
 
     <div class="container">
-        <h3 class="mbr-section-title display-2">Quality Ensured</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-k" style="background-image: url(assets/images/delivery-web-824x549.jpg); padding-top: 80px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Speedy Delivery</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-l" style="background-image: url(assets/images/yourstory-service-msme.jpg); padding-top: 40px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Service</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-m" style="background-image: url(assets/images/shutterstock.jpg); padding-top: 40px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Satisfaction</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-n" style="background-image: url(assets/images/154141152.jpg); padding-top: 40px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Value for you money</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-o" style="background-image: url(assets/images/fdb8efd381b916e856854b8577247e45.jpg); padding-top: 80px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Old is Gold</h3>
-        <div class="lead"></div>
-    </div>
-
-</section>
-
-<section class="mbr-section mbr-parallax-background" id="content5-p" style="background-image: url(assets/images/gifts1.jpg); padding-top: 80px; padding-bottom: 0px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">Memorable Gifts</h3>
-        <div class="lead"></div>
+        <h3 class="mbr-section-title display-2">Quality Products</h3>
+        <div class="lead"><p>Sri Vadivelan Stores always gives important preference ro quality. We always offer quality products to our valuable customers which lasts for a long time</p></div>
     </div>
 
 </section>
@@ -720,6 +648,78 @@
     <div class="container">
         <h3 class="mbr-section-title display-2">Digital Payment</h3>
         <div class="lead"></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-16" style="background-image: url(assets/images/delivery-web-824x549.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Speedy Delivery</h3>
+        <div class="lead"><p>We offer Delivery facility in our showroom. Customers who placed any bulk orders or marriage vessel set purchase can avail this facility. We'll arange a truck for you, so you can transport your goods safely without any haste</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-17" style="background-image: url(assets/images/yourstory-service-msme.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Service</h3>
+        <div class="lead"><p>Sri Vadivelan Stores always gives an excellent service to our customers. Mostly the products you buy in our showroom are free from damages. If there is any damages in vessels like leaking, it can rectified at free of cost. Company products also serviced through the respective companies service centre by us</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-18" style="background-image: url(assets/images/154141152.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Value for your Money</h3>
+        <div class="lead"><p>We know the value of your money and we make sure that it wont be wasted at any cause. We offer quality products worthable for the money you are paying</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-19" style="background-image: url(assets/images/fdb8efd381b916e856854b8577247e45.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Old in Gold</h3>
+        <div class="lead"><p>We exchange old stainless steel, brass, aluminum, copper vessels, plastic, scraps and appliances at higher rates. You can buy new products by exchanging them</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-1a" style="background-image: url(assets/images/gifts1.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Memorable Gifts</h3>
+        <div class="lead"><p>We offer memorable gifts to the bridal on purchasing marriage vessel set. We also often announce special sales with amazing gifts and slashed down prices</p></div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="content5-1b" style="background-image: url(assets/images/shutterstock.jpg); padding-top: 80px; padding-bottom: 0px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">Satisfaction</h3>
+        <div class="lead"><p>Our motto is earning customer's love and fulfilling thier satisfaction. We always offer you excellent service both before and after the purchase</p></div>
     </div>
 
 </section>
@@ -900,7 +900,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="06CzVGmHJyifto82jZQcP8RKmF2B9ite9btT0m42lRELwYluB4PU+MC0pcC16CVr41JE2sSgt1dB2gpHMrrd9waqwP1ceLNk7CC9ZJyXBpGtF3USUalPABKvF8xP+Bsu" data-form-email="true">
+                    <input type="hidden" value="wDtlLTIkQMXV+3dsnVnpm3E7Qucq6F+Erp9BYCNGJh0RnYPT/PbnHCUygb4NrHZMpQoD4vv/TOKzw3Rly3jcpp/IXfF4eF5zGYrH3ZbhFrAI8v/6euvh4/lvsWICb0rC" data-form-email="true">
 
                     
 
